--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,13 @@ safetensors==0.3.1
 torch==2.0.1+cu117
 transformers==4.29.2
 xformers==0.0.20
+
+realesrgan
+basicsr>=1.4.2
+facexlib>=0.2.5
+gfpgan>=1.3.5
+numpy
+opencv-python
+Pillow
+torchvision
+tqdm
