Modify to use Textual Inversion.

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ USE_VAE="false"
 #  - `LORA_DOWNLOAD_URLS="https://civitai.com/api/download/models/xxxxxx,https://civitai.com/api/download/models/xxxxxx"`
 LORA_NAMES=""
 LORA_DOWNLOAD_URLS=""
+
+# Add Textual Inversion you wan to use. Usage is the same as `LORA_NAMES` and `LORA_DOWNLOAD_URLS`.
+TEXTUAL_INVERSION_NAMES=""
+TEXTUAL_INVERSION_DOWNLOAD_URLS=""
