--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 accelerate
 diffusers[torch]==0.17.1
-onnxruntime==1.15.0
+onnxruntime==1.15.1
 safetensors==0.3.1
 torch==2.0.1+cu117
-transformers==4.29.2
+transformers==4.30.2
 xformers==0.0.20
 
-realesrgan
+realesrgan==0.3.0
 basicsr>=1.4.2
-facexlib>=0.2.5
-gfpgan>=1.3.5
+facexlib>=0.3.0
+gfpgan>=1.3.8
 numpy
 opencv-python
 Pillow
