Add a face enhancer.

--- a/.env.example
+++ b/.env.example
@@ -7,16 +7,26 @@ USE_VAE="false"
 
 # Add LoRA if you want to use one. You can use a download link of civitai.
 # ex)
-#  - `LORA_NAMES="hogehoge.safetensors"`
-#  - `LORA_DOWNLOAD_URLS="https://civitai.com/api/download/models/xxxxxx"`
+#   - `LORA_NAMES="hogehoge.safetensors"`
+#   - `LORA_DOWNLOAD_URLS="https://civitai.com/api/download/models/xxxxxx"`
 #
 # If you have multiple LoRAs you want to use, separate by commas like the below:
 # ex)
-#  - `LORA_NAMES="hogehoge.safetensors,mogumogu.safetensors"`
-#  - `LORA_DOWNLOAD_URLS="https://civitai.com/api/download/models/xxxxxx,https://civitai.com/api/download/models/xxxxxx"`
+#   - `LORA_NAMES="hogehoge.safetensors,mogumogu.safetensors"`
+#   - `LORA_DOWNLOAD_URLS="https://civitai.com/api/download/models/xxxxxx,https://civitai.com/api/download/models/xxxxxx"`
 LORA_NAMES=""
 LORA_DOWNLOAD_URLS=""
 
 # Add Textual Inversion you wan to use. Usage is the same as `LORA_NAMES` and `LORA_DOWNLOAD_URLS`.
 TEXTUAL_INVERSION_NAMES=""
 TEXTUAL_INVERSION_DOWNLOAD_URLS=""
+
+# `UPSCALER` is a name of upscaler you want to use.
+# Set `true` if you want to use a face enhancer too.
+# You can use upscalers the below:
+#   - `RealESRGAN_x4plus`
+#   - `RealESRNet_x4plus`
+#   - `RealESRGAN_x4plus_anime_6B`
+#   - `RealESRGAN_x2plus`
+UPSCALER="RealESRGAN_x4plus_anime_6B"
+USE_FACE_ENHANCER="false"
