--- a/.github/workflows/style_and_error_checker.yml
+++ b/.github/workflows/style_and_error_checker.yml
@@ -17,6 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install pycodestyle pyflakes
     - name: Analysing the code with pycodestyle
       run: |
         pycodestyle --first $(git ls-files '*.py')
