--- a/.github/workflows/style_and_error_checker.yml
+++ b/.github/workflows/style_and_error_checker.yml
@@ -20,5 +20,5 @@ jobs:
         pip install pycodestyle pyflakes
     - name: Analysing the code with pycodestyle
       run: |
-        pycodestyle --first $(git ls-files '*.py')
+        pycodestyle --first --ignore='E501' $(git ls-files '*.py')
         pyflakes $(git ls-files '*.py')
