--- a/setup_files/Dockerfile
+++ b/setup_files/Dockerfile
@@ -1,7 +1,9 @@
 FROM python:3.11.3-slim-bullseye
-COPY requirements.txt /
+COPY ./requirements.txt /
 RUN apt update \
     && apt install -y wget git libgl1-mesa-glx libglib2.0-0 \
+    && apt autoremove -y \
+    && apt clean -y \
     && pip install -r requirements.txt --extra-index-url https://download.pytorch.org/whl/cu117 \
     && mkdir -p /vol/cache/esrgan \
     && wget https://github.com/xinntao/Real-ESRGAN/releases/download/v0.1.0/RealESRGAN_x4plus.pth -P /vol/cache/esrgan \
