--- a/setup_files/requirements.txt
+++ b/setup_files/requirements.txt
@@ -1,16 +1,17 @@
+invisible_watermark
 accelerate
-diffusers[torch]==0.17.1
+diffusers[torch]==0.20.1
 onnxruntime==1.15.1
-safetensors==0.3.1
+safetensors==0.3.3
 torch==2.0.1+cu117
-transformers==4.30.2
-xformers==0.0.20
+transformers==4.32.0
+xformers==0.0.21
 
 realesrgan==0.3.0
 basicsr>=1.4.2
 facexlib>=0.3.0
 gfpgan>=1.3.8
-numpy
+scipy==1.11.1
 opencv-python
 Pillow
 torchvision
