--- a/.github/workflows/style_and_error_checker.yml
+++ b/.github/workflows/style_and_error_checker.yml
@@ -7,18 +7,18 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ['3.9', '3.10', '3.11']
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pycodestyle pyflakes
-    - name: Analysing the code with pycodestyle
-      run: |
-        pycodestyle --first --ignore='E501' $(git ls-files '*.py')
-        pyflakes $(git ls-files '*.py')
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pycodestyle pyflakes
+      - name: Analysing the code with pycodestyle
+        run: |
+          pycodestyle --first --ignore='E501' $(git ls-files '*.py')
+          pyflakes $(git ls-files '*.py')
