--- a/.github/workflows/docker_image_ci.yml
+++ b/.github/workflows/docker_image_ci.yml
@@ -16,4 +16,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Build the Docker image
-        run: docker build . -f ./setup_files/Dockerfile
+        run: |
+          cd setup_files
+          docker build . -f Dockerfile
