Repair docker_image_ci.yml

--- a/.github/workflows/docker_image_ci.yml
+++ b/.github/workflows/docker_image_ci.yml
@@ -1,8 +1,13 @@
 name: Docker image CI
 
 on:
+  push:
+    branches:
+      - 'main'
+      - 'feature/*'
   pull_request:
     branches:
+      - 'main'
       - 'feature/*'
 
 jobs:
