--- a/setup_files/requirements.txt
+++ b/setup_files/requirements.txt
@@ -19,3 +19,9 @@ tqdm
 
 controlnet_aux
 pyyaml
+
+# Use the below in 'download_from_original_stable_diffusion_ckpt'.
+omegaconf==2.3.0
+
+# Another tools
+wget==3.2
