--- a/.github/workflows/docker_image_ci.yml
+++ b/.github/workflows/docker_image_ci.yml
@@ -1,6 +1,10 @@
 name: Docker image CI
 
-on: [push]
+on:
+  push:
+    paths:
+      - setup_files/Dockerfile
+      - setup_files/requirements.txt
 
 jobs:
   build:
