--- a/setup_files/requirements.txt
+++ b/setup_files/requirements.txt
@@ -3,9 +3,9 @@ accelerate
 diffusers[torch]==0.21.4
 onnxruntime==1.16.1
 safetensors==0.4.0
-torch==2.0.1+cu117
+torch==2.1.0
 transformers==4.34.1
-xformers==0.0.22
+xformers==0.0.22.post7
 
 realesrgan==0.3.0
 basicsr>=1.4.2
