--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -20,5 +20,5 @@ jobs:
           pip install pycodestyle pyflakes
       - name: Analysing the code with pycodestyle
         run: |
-          pycodestyle --first --ignore='E501,F401' $(git ls-files '*.py')
+          pycodestyle --first --ignore='E501' --ignore='F401' $(git ls-files '*.py')
           pyflakes $(git ls-files '*.py')
