--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Analysing the code with pycodestyle
         run: |
           pycodestyle --first --ignore=E501 $(git ls-files '*.py')
-          pyflakes --ignore=F401 $(git ls-files '*.py')
+          # pyflakes --ignore=F401 $(git ls-files '*.py')
