--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pycodestyle pyflakes
+          pip install pycodestyle
       - name: Analysing the code with pycodestyle
         run: |
           pycodestyle --first --ignore=E501 $(git ls-files '*.py')
