Repair .github/workflows/docker_image_ci.yml.

--- a/.github/workflows/docker_image_ci.yml
+++ b/.github/workflows/docker_image_ci.yml
@@ -3,8 +3,8 @@ name: Docker image CI
 on:
   push:
     paths:
-      - setup_files/Dockerfile
-      - setup_files/requirements.txt
+      - app/Dockerfile
+      - app/requirements.txt
 
 jobs:
   build:
