--- a/.github/workflows/docker_image_ci.yml
+++ b/.github/workflows/docker_image_ci.yml
@@ -14,5 +14,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build the Docker image
         run: |
-          cd setup_files
+          cd app
           docker build . -f Dockerfile
