--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,21 +1,21 @@
 invisible_watermark
 accelerate
-diffusers[torch]==0.24.0
-onnxruntime==1.16.3
-safetensors==0.4.1
-torch==2.1.0
-transformers==4.39.1
-xformers==0.0.22.post7
+diffusers[torch]==0.27.2
+onnxruntime==1.17.3
+safetensors==0.4.3
+torch==2.2.2
+transformers==4.39.3
+xformers==0.0.25.post1
 
 realesrgan==0.3.0
 basicsr>=1.4.2
 facexlib>=0.3.0
 gfpgan>=1.3.8
-scipy==1.12.0
+scipy==1.13.0
 opencv-python
 Pillow
 pillow-avif-plugin
-torchvision
+torchvision==0.17.2
 tqdm
 
 controlnet_aux
