--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,27 +1,15 @@
-invisible_watermark
-accelerate
 diffusers[torch]==0.27.2
-onnxruntime==1.17.3
-safetensors==0.4.3
+accelerate
 torch==2.2.2
 transformers==4.40.0
 xformers==0.0.25.post1
 
-realesrgan==0.3.0
-basicsr>=1.4.2
-facexlib>=0.3.0
-gfpgan>=1.3.8
-scipy==1.13.0
-opencv-python
-Pillow
-pillow-avif-plugin
-torchvision==0.17.2
-tqdm
-
+invisible_watermark # To help viewers identify the images as machine-generated.
+onnxruntime==1.17.3 # ONNX Runtime uses the following optimizations to speed up Stable Diffusion in CUDA.
+safetensors==0.4.3 # To store tensors safely.
 controlnet_aux
-pyyaml
 
-# Use the below in 'download_from_original_stable_diffusion_ckpt'.
-omegaconf==2.3.0
-
+Pillow
+pillow-avif-plugin # To save images in AVIF format.
+pyyaml # To read the configuration file by written YAML.
 peft
