--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,7 +5,7 @@ transformers==4.40.2
 xformers==0.0.26.post1
 
 invisible_watermark # To help viewers identify the images as machine-generated.
-onnxruntime==1.17.3 # ONNX Runtime uses the following optimizations to speed up Stable Diffusion in CUDA.
+onnxruntime==1.18.0 # ONNX Runtime uses the following optimizations to speed up Stable Diffusion in CUDA.
 safetensors==0.4.3 # To store tensors safely.
 controlnet_aux
 
@@ -13,3 +13,13 @@ Pillow
 pillow-avif-plugin # To save images in AVIF format.
 pyyaml # To read the configuration file by written YAML.
 peft
+numpy==1.26.4
+
+# A module that was compiled using NumPy 1.x cannot be run in
+# NumPy 2.0.0 as it may crash. To support both 1.x and 2.x
+# versions of NumPy, modules must be compiled with NumPy 2.0.
+# Some module may need to rebuild instead e.g. with 'pybind11>=2.12'.
+
+# If you are a user of the module, the easiest solution will be to
+# downgrade to 'numpy<2' or try to upgrade the affected module.
+# We expect that some modules will need time to support NumPy 2.
