--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,6 @@
-diffusers[torch]==0.32.2
-accelerate
 torch==2.6.0
+diffusers[torch]==0.32.2
+accelerate==1.3.0
 transformers==4.48.3
 xformers==0.0.29.post2
 
