--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -1,23 +1,17 @@
-name: Lint-Python
-
-on: [push]
-
+name: CI
+on: push
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ['3.10', '3.11']
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Install Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.11"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pycodestyle
-      - name: Analysing the code with pycodestyle
-        run: |
-          pycodestyle --first --ignore=E501 $(git ls-files '*.py')
+          pip install ruff
+      - name: Run Ruff
+        run: ruff check --output-format=github .
